Configurando swagger para endpoints
