# ship/ship.go
@@ -12,14 +12,14 @@ import (
 )
 
 // TopSecret godoc
-// @Description recibe un json array con la lista de satelites y retorna la posicion y el mensaje del emisor
+// @Description Recibe un json array con la información de los satélites y retorna la posicion y el mensaje del emisor
 // @Accept json
 // @Produce json
-// @Param Request body Request true "Datos necesarios para localizar la posicion y obtener el mensaje del emisor"
-// @Success 200
-// @Failure 403
-// @Failure 404
-// @Failure 500
+// @Param request body structs.Request true "Datos necesarios de satélites para localizar la posición y obtener el mensaje del emisor"
+// @Success 200 {object} structs.Translator
+// @Failure 400 {object} structs.ResponseError
+// @Failure 404	{object} structs.ResponseError
+// @Failure 500 {object} structs.ResponseError
 // @Router /topsecret [post]
 func TopSecret(ctx *gin.Context){
 	var request structs.Request
@@ -32,7 +32,7 @@ func TopSecret(ctx *gin.Context){
 		return
 	}
 	if !validateSatellitesRequested(request.Satellites){
-		ctx.JSON(http.StatusBadRequest, "Satellites repeated")
+		ctx.JSON(http.StatusBadRequest, &structs.ResponseError{ Description: "Satellites missing or repeated"})
 		return
 	}
 	
@@ -54,66 +54,65 @@ func TopSecret(ctx *gin.Context){
 	translator.Position.X, translator.Position.Y = resolver.GetLocation(distances)
 	
 	if !resolver.Validate_Location(translator.Position.X, translator.Position.Y, distances){
-		ctx.JSON(http.StatusNotFound, "Invalid distances with coordinates")
+		ctx.JSON(http.StatusNotFound, &structs.ResponseError{ Description: "Invalid distances with coordinates"})
 		return
 	}
 
 	translator.Message = decoder.GetMessage(messages)
 
 	if !decoder.Validate_Message(translator.Message){
-		ctx.JSON(http.StatusNotFound, "Invalid message")
+		ctx.JSON(http.StatusNotFound, &structs.ResponseError{ Description: "Invalid message in any satellite or can't tranlate message"})
 		return
 	}
-	//fmt.Println(request)
 	ctx.JSON(http.StatusOK, translator)
 }
 
 // TopSecretSplitPost godoc
-// @Description recibe un json y retorna la posicion y el mensaje del emisor si es posible calcularla
+// @Description Recibe un json con la información del satélite enviado por parámetro y retorna el nombre del mismo si fue posible almacenarlo
 // @Accept json
 // @Produce json
-// @Param satellite_name path int true "Datos necesarios para localizar la posicion y obtener el mensaje del emisor"
-// @Success 200
-// @Failure 403
-// @Failure 404
-// @Failure 500
+// @Param satellite_name path string true "Nombre del satélite necesario para poder localizar la posición y obtener el mensaje del emisor" 
+// @Param request body structs.SatelliteRequest true "Datos necesarios del satélite para localizar la posición y obtener el mensaje del emisor"
+// @Success 200 {object} structs.SatelliteRequest
+// @Failure 400 {object} structs.ResponseError
+// @Failure 404	{object} structs.ResponseError
+// @Failure 500	{object} structs.ResponseError
 // @Router /topsecret_split/{satellite_name} [post]
 func TopSecretSplitPost(ctx *gin.Context){
 	satelliteName := ctx.Param("satellite_name")
-	fmt.Println(satelliteName)
 	var satellite structs.SatelliteRequest
 	err := ctx.BindJSON(&satellite)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error with the satellites requested": err.Error()})
 		return
 	}
-	satellite.Name = satelliteName
-	fmt.Println(satellite)
+	satellite.Name = strings.ToLower(satelliteName)
 
 	//Validate if satellite_name exists in satellites configured 
 	if contains(structs.SatellitesConfigured, strings.ToLower(satelliteName)){
-		cache.SetCache(satelliteName, satellite)
+		a := cache.SetCache(satellite.Name, satellite)
+		fmt.Println(a)
+		ctx.JSON(http.StatusOK, satellite)
 	} else {
-			ctx.JSON(http.StatusBadRequest, satelliteName)
+			ctx.JSON(http.StatusBadRequest, &structs.ResponseError{ Description: satellite.Name + " not registered in the satellites configured"})
 		}
-		
-	ctx.JSON(http.StatusOK, satelliteName)
+	
 }
 
 
 // TopSecretSplitGet godoc
-// @Description recibe un json y retorna la posicion y el mensaje del emisor si es posible calcularla
+// @Description Retorna la posición y el mensaje del emisor si es posible calcularlos y si se registraron los satélites necesarios
 // @Accept json
 // @Produce json
-// @Success 200
-// @Failure 403
-// @Failure 404
-// @Failure 500
+// @Success 200 {object} structs.Translator
+// @Failure 400 {object} structs.ResponseError
+// @Failure 404 {object} structs.ResponseError
+// @Failure 500 {object} structs.ResponseError
 // @Router /topsecret_split [get]
 func TopSecretSplitGet(ctx *gin.Context){
 	fmt.Println(cache.CountingItems())
 	if cache.CountingItems() != 3 {
-		ctx.JSON(http.StatusBadRequest, "Missing distances and messages from satellites")
+		ctx.JSON(http.StatusBadRequest, &structs.ResponseError{ Description: "Missing distances and messages from satellites"})
 		return
 	}
 
@@ -125,7 +124,7 @@ func TopSecretSplitGet(ctx *gin.Context){
 		satelliteData, founded := cache.GetCache(strings.ToLower(satellite.Name))
 		
 		if !founded {
-			ctx.JSON(http.StatusNotFound, "Satellite not founded")
+			ctx.JSON(http.StatusNotFound, &structs.ResponseError{ Description: "Satellite not found: " + satellite.Name})
 			return
 		}	
 		//cargar las distancias y los mensajes
@@ -135,7 +134,17 @@ func TopSecretSplitGet(ctx *gin.Context){
 	}
 
 	translator.Position.X, translator.Position.Y = resolver.GetLocation(distances)
+	if !resolver.Validate_Location(translator.Position.X, translator.Position.Y, distances){
+		ctx.JSON(http.StatusNotFound, &structs.ResponseError{ Description: "Invalid distances with coordinates"})
+		return
+	}
+
 	translator.Message = decoder.GetMessage(messages)
+	//validate message
+	if !decoder.Validate_Message(translator.Message){
+		ctx.JSON(http.StatusNotFound, &structs.ResponseError{ Description: "Invalid message in any satellite or can't translate message"})
+		return
+	}
 
 	ctx.JSON(http.StatusOK, translator)
 }
